src/objects/Value_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to track field available value mappings between CSV input files and Salesforce object outputs</description>
    <fields>
        <fullName>CSV_Input__c</fullName>
        <description>Available values for this field from the CSV file</description>
        <inlineHelpText>Available values for this field from the CSV file</inlineHelpText>
        <label>CSV Input</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Mapping__c</fullName>
        <description>The Field Mapping field API name entry that this Value Mapping pertains to</description>
        <inlineHelpText>The Field Mapping field API name entry that this Value Mapping pertains to</inlineHelpText>
        <label>Field Mapping</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Value__c</fullName>
        <description>Output value used for this field in Salesforce</description>
        <inlineHelpText>Output value used for this field in Salesforce</inlineHelpText>
        <label>Salesforce Value</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Value Mapping</label>
</CustomObject>